# rca-llm

./: .gitattributes  .pre-commit-config.yaml  README.md
ansible/: .gitignore  README.md  ansible.cfg  example.inventory.ini  execute-experiment.yaml  experiments-rca-anomaly-injections.yaml  experiments-smoke-tests.yaml  install-k3s.yaml  install-nvidia-operator.yaml  install-observability.yaml  install-ray.yaml  pyproject.toml  requirements.yaml
ansible/configs/: config_base.yaml  config_falcon-2-11b.yaml  config_falcon-h1-7b-instruct.yaml  config_gemma-2-9b.yaml  config_llama-3dot1-8b-instruct.yaml  config_mistral-0dot3-7b-instruct.yaml  config_phi-4.yaml  config_qwen-2dot5-7b-instruct.yaml  config_vllm.yaml
ansible/roles/experiment/chaos/defaults/: main.yaml
ansible/roles/experiment/chaos/files/: chaosmesh-helm-overrides.yaml
ansible/roles/experiment/chaos/tasks/: _modify_gpu_configuration.yaml  inject_anomaly.yaml  install_helm.yaml  main.yaml
ansible/roles/experiment/chaos/templates/: gpu-injection-artifact.json.j2  network-chaos-delay.yaml.j2  stress-chaos-cpu.yaml.j2  stress-chaos-memory.yaml.j2
ansible/roles/experiment/load/defaults/: main.yaml
ansible/roles/experiment/load/files/: export_logs.py  export_metrics.py  export_rca_data.py  export_traces.py
ansible/roles/experiment/load/tasks/: _fetch_logs.yaml  _fetch_metrics.yaml  _fetch_rca_data.yaml  _fetch_traces.yaml  _prepare_dcgm_query.yaml  (+4 more)
ansible/roles/ray/tasks/: install_helm.yaml  install_monitors.yaml  install_proxy.yaml  main.yaml
ansible/roles/ray/templates/: nginx-proxy.yaml.j2
(+96 files in other folders)
